@@ -1,6 +1,8 @@
 0.2.5 (not yet released)
 - add each_cell_as_arrays, each_row and each_row_as_arrays methods to 
   ruby thrift client
+- new find_with_scanner and find_to_scan_spec methods for iterating over 
+  results in small batches, doesn't exhaust memory on million-row queries
 
 0.2.4 2009/04/06
 - find_by_hql support
